tests/rosetta/transpiler/erl/arithmetic-evaluation.error
exit status 127
escript: exception error: bad map: "2*(3-1)+2*5"
  in function  map_size/1
     called as map_size("2*(3-1)+2*5")
     *** argument 1: not a map
  in call from main:'-skipws/1-Fun_loop/2-0-'/2 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 46)
  in call from main:skipws/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 53)
  in call from main:parsefactor/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 105)
  in call from main:parsepower/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 166)
  in call from main:parseterm/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 204)
  in call from main:parseexpr/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 272)
  in call from main:evalexpr/1 (/workspace/mochi/tests/rosetta/transpiler/erl/arithmetic-evaluation.erl, line 341)
